<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.yeison.contacafe.AddWorkerActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/cafemaduro"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

    <EditText
        android:id="@+id/add_name_worker"
        android:hint="@string/nombre_trabajador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginbot"
        android:background="#7d7d81"
        android:gravity="center"
        android:textColor="#831b0f"
        />
    <EditText
        android:id="@+id/add_klu"
        android:hint="@string/kilos_lunes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginbot"
        android:inputType="number"
        android:background="#7d7d81"
        android:gravity="center"
        android:textColor="#831b0f"
        />
    <EditText
        android:id="@+id/add_kma"
        android:hint="@string/kilos_martes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginbot"
        android:inputType="number"
        android:background="#7d7d81"
        android:gravity="center"
        android:textColor="#831b0f"
        />
    <EditText
        android:id="@+id/add_kmi"
        android:hint="@string/kilos_miercoles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginbot"
        android:inputType="number"
        android:background="#7d7d81"
        android:gravity="center"
        android:textColor="#831b0f"
        />
    <EditText
        android:id="@+id/add_kju"
        android:hint="@string/kilos_jueves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginbot"
        android:inputType="number"
        android:background="#7d7d81"
        android:gravity="center"
        android:textColor="#831b0f"
        />
    <EditText
        android:id="@+id/add_kvi"
        android:hint="@string/kilos_viernes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginbot"
        android:inputType="number"
        android:background="#7d7d81"
        android:gravity="center"
        android:textColor="#831b0f"
        />
    <EditText
        android:id="@+id/add_ksa"
        android:hint="@string/kilos_sabado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginbot"
        android:inputType="number"
        android:background="#7d7d81"
        android:gravity="center"
        android:textColor="#831b0f"
        />
    <EditText
        android:id="@+id/add_kdom"
        android:hint="@string/kilos_domingo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginbot"
        android:inputType="number"
        android:background="#7d7d81"
        android:gravity="center"
        android:textColor="#831b0f"
        />

    <Button
        android:id="@+id/btn_add_worked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
