<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.yeison.contacafe.AddInsumosActivity"
    android:orientation="vertical"
    android:background="@drawable/cafeago">

    <EditText
        android:id="@+id/add_insumo"
        android:hint="@string/nombre_insumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginbot"
        android:inputType="text"
        android:background="#7d7d81"
        android:gravity="center"
        android:textColor="#831b0f"
        />
    <EditText
        android:id="@+id/add_costo_insumo"
        android:hint="@string/costo_insumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginbot"
        android:inputType="numberDecimal"
        android:background="#7d7d81"
        android:gravity="center"
        android:textColor="#831b0f"
        />

    <Button
        android:id="@+id/btn_add_insumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        />



</LinearLayout>
