<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.yeison.contacafe.LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/cafemaduro"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:background="#94060f"
        android:textColor="#ffffff"
        android:layout_marginBottom="@dimen/marginbot"
        android:padding="@dimen/padding30"
        />

    <EditText
        android:id="@+id/login_usr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#94060f"
        android:inputType="text"
        android:layout_marginBottom="@dimen/small"
        android:textColorHint="#b594060f"
        android:hint="@string/login_usr"
        android:background="#7d7d81"
        android:gravity="center"

        />
    <EditText
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#94060f"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/small"
        android:textColorHint="#af9d060f"
        android:hint="@string/login_pass"
        android:background="#7d7d81"
        android:gravity="center"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:textColor="#94060f"
        />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
